[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/FlowerProcess/src/ProcessScence.gd" type="Script" id=1]
[ext_resource path="res://addons/FlowerProcess/src/Menu.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/FlowerProcess/src/Assets/Theme.tres" type="Theme" id=3]

[node name="Process" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
script = ExtResource( 1 )

[node name="Vbox" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="Hbox" type="HBoxContainer" parent="Vbox"]
margin_top = 18.0
margin_right = 1920.0
margin_bottom = 58.0

[node name="del" type="Button" parent="Vbox/Hbox"]
margin_right = 84.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
text = "Del All"

[node name="GraphEdit" type="GraphEdit" parent="Vbox"]
margin_top = 62.0
margin_right = 1920.0
margin_bottom = 1062.0
rect_min_size = Vector2( 0, 1000 )

[node name="Menu" parent="." instance=ExtResource( 2 )]
visible = false

[node name="Node2D" type="Node2D" parent="."]

[connection signal="pressed" from="Vbox/Hbox/del" to="." method="_on_del_pressed"]
[connection signal="gui_input" from="Vbox/GraphEdit" to="." method="_on_GraphEdit_gui_input"]
[connection signal="popup_request" from="Vbox/GraphEdit" to="." method="_on_GraphEdit_popup_request"]
